[gd_scene load_steps=4 format=3 uid="uid://b52o46cc45rnh"]

[ext_resource type="Script" path="res://sample/Completions/completion_demo.gd" id="1_t47sq"]
[ext_resource type="Script" path="res://sample/Models/response_label.gd" id="2_id5o8"]
[ext_resource type="Script" path="res://addons/lm_studio_api/lib/completions.gd" id="3_5hgiv"]

[node name="Completion Demo" type="VBoxContainer"]
script = ExtResource("1_t47sq")
metadata/_tab_index = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Response:"
script = ExtResource("2_id5o8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "Send Message"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.59

[node name="MessagePanel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/MessagePanel/VBoxContainer"]
layout_mode = 2
text = "Message:"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/MessagePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../SystemPanel/VBoxContainer/TextEdit")
placeholder_text = "Put your message here"
wrap_mode = 1

[node name="SystemPanel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SystemPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/SystemPanel/VBoxContainer"]
layout_mode = 2
text = "System Prompt:"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/SystemPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../MessagePanel/VBoxContainer/TextEdit")
placeholder_text = "Try: You can only speak in rhymes"
wrap_mode = 1

[node name="LMStudioCompletions" type="Node" parent="."]
script = ExtResource("3_5hgiv")

[connection signal="pressed" from="Button" to="." method="_on_submit_response"]
[connection signal="on_success" from="LMStudioCompletions" to="." method="_on_recieve_completion_response"]
